cleaned up pathing/behavior; fixed some alignent issues with order tmpl

--- a/assets/index.css
+++ b/assets/index.css
@@ -116,10 +116,14 @@ td {
 }
 
 .removeFromOrder {
+	top: 0px;
+	left: -4px;
 	color: red;
 	font-size: 14px;
 	font-weight: 700;
 	cursor: pointer;
+	text-align: right;
+	position: relative;
 }
 
 #restaurantMenusPanel {
@@ -133,11 +137,22 @@ td {
 	border-right: 1px dotted grey;
 }
 
+.menuHeader {
+	font-size: 16px;
+	font-weight: 700;
+	text-align: center;
+}
+
+.menuInfo {
+	font-size: 12px;
+	font-weight: 500;
+	text-align: center;
+}
+
 #orderPanel {
-	background-color: #fff;
-	padding-right:50px;
-	position:fixed;
 	top: 120px;
+	background-color: #fff;
+	position:fixed;
 }
 
 .orderHead {
@@ -150,7 +165,10 @@ td {
 }
 
 #thingPrice {
+	top: 0px;
+	left: 4px;
 	text-align: right;
+	position: relative;
 }
 
 #subtotalRow {
@@ -169,20 +187,24 @@ td {
 	border-top: 1px solid #C0C2FF;
 }
 
-.subtotal {
-	text-align: right:
+#subtotal {
+	text-align: right;
 }
 
-.delivery {
-	text-align: right:
+#tax {
+	text-align: right;
 }
 
-.discount {
-	text-align: right:
+#deliveryFee {
+	text-align: right;
 }
 
-.total {
-	text-align: right:
+#discount {
+	text-align: right;
+}
+
+#total {
+	text-align: right;
 }
 
 .error {
